# webviewhs

./: .gitignore  CHANGELOG.md  README.md  cabal.project  makefile  stack.yaml  webviewhs.cabal
.github/workflows/: ci.yml
docs/: Graphics-UI-Webviewhs.html  doc-index.html  iindex.html  index.html  mini_Graphics-UI-Webviewhs.html
docs/src/: Graphics.UI.Webviewhs.html
examples/: CHANGELOG.md  README.md  how-do-i-communicate-with-haskell-from-javascript.hs  how-do-i-create-a-window-and-have-it-run-itself.hs  how-do-i-create-a-window.hs  how-do-i-exit-the-window.hs  how-do-i-inject-some-custom-css-into-the-window.hs  how-do-i-inline-an-html-page-on-start-up.hs  how-do-i-log-some-debug-information.hs  how-do-i-open-a-save-dialog.hs  how-do-i-open-an-alert-dialog.hs  how-do-i-open-an-open-dialog.hs  how-do-i-run-my-own-function-in-the-window-loop.hs  how-do-i-run-some-function-in-the-main-window-thread-while-in-some-other-thread.hs  how-do-i-run-some-javascript-inside-the-window.hs  how-do-i-set-the-window-title.hs  how-do-i-set-the-windows-color.hs  how-do-i-terminate-the-window-loop.hs  how-do-i-toggle-the-windows-fullscreen-state.hs  stack.yaml  webviewhs-examples.cabal
examples-light/: CHANGELOG.md  README.md  how-do-i-communicate-with-haskell-from-javascript.hs  how-do-i-inject-some-custom-css-into-the-window.hs  how-do-i-log-some-debug-information.hs  stack.yaml  webviewhs-examples-light.cabal
src/Graphics/UI/: Webviewhs.hs
src/c/: webview-ffi.c  webview-ffi.h
